--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,12 @@
     <string name="lyrics1">聞こえないフリして</string>
     <string name="lyrics2">ごまかしていたけど</string>
     <string name="b8sp2">8ビート スト p2</string>
+    <string-array name="menu_list">
+        <item>重要なお知らせ</item>
+        <item>操作</item>
+        <item>設定</item>
+        <item>その他</item>
+    </string-array>
+    <string name="menu_list_add_for_develop">開発メニュー</string>
+    <string name="close">閉じる</string>
 </resources>
