--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="menu_list_add_for_develop">開発メニュー</string>
     <string name="close">閉じる</string>
     <string name="restart">オーディオ再起動</string>
+    <string-array name="menu_list_devlop_sub">
+        <item>オーディオ設定</item>
+        <item>オーディオ実験</item>
+    </string-array>
 </resources>
